# piano-transcription-research

./: .gitignore  config.yaml  config.yml  dataset_view.py  download.py  generate_json_schema.py  preprocess_maestro.py  pyproject.toml  train.py  validate_dataset_labeling.py
experiments/01_onsets_and_frames/: config.yaml  config.yml  infer.py  train.py
experiments/02_hft_transformer/: config.yaml  infer.py  train.py
schemas/: config.schema.json
src/modules/: audio.py  config.py  dataset.py  decoding.py  evaluate.py  label.py  midi.py  train.py  training.py
src/modules/config/: __init__.py  hft_transformer.py  logger.py  mel_spectrogram.py  midi.py  onsets_and_frames.py
src/modules/dataset/: __init__.py  maestro.py
src/modules/lightning/modules/: hft_transformer.py  onsets_and_frames.py
src/modules/models/: __init__.py  onsets_and_frames.py
src/modules/models/hft_transformer/: __init__.py
